@@ -7,12 +7,11 @@ import android.view.View;
 import org.joinmastodon.android.R;
 import org.joinmastodon.android.model.Notification;
 import org.joinmastodon.android.model.Status;
+import org.joinmastodon.android.ui.displayitems.InlineStatusStatusDisplayItem;
 import org.joinmastodon.android.ui.displayitems.NotificationHeaderStatusDisplayItem;
 import org.joinmastodon.android.ui.displayitems.StatusDisplayItem;
 import org.parceler.Parcels;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import me.grishka.appkit.Nav;
@@ -34,16 +33,15 @@ public abstract class BaseNotificationsListFragment extends BaseStatusListFragme
 			}
 		}
 		if(n.status!=null){
-			// TODO
-			int flags=titleItem==null ? 0 : (StatusDisplayItem.FLAG_NO_FOOTER | StatusDisplayItem.FLAG_NO_HEADER);
-			ArrayList<StatusDisplayItem> items=StatusDisplayItem.buildItems(this, n.status, accountID, n, knownAccounts, flags);
-			if(titleItem!=null)
-				items.add(0, titleItem);
-			return items;
+			if(titleItem!=null){
+				return List.of(titleItem, new InlineStatusStatusDisplayItem(n.id, this, n.status));
+			}else{
+				return StatusDisplayItem.buildItems(this, n.status, accountID, n, knownAccounts, 0);
+			}
 		}else if(titleItem!=null){
-			return Collections.singletonList(titleItem);
+			return List.of(titleItem);
 		}else{
-			return Collections.emptyList();
+			return List.of();
 		}
 	}
 
